# nrf52840dk-sample

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
